deprected comment functionality from backend
